# notion-etl

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: example1.py  example1.yaml
notion_etl/: configs.py  converters.py  etl.py  logging.py  strenum.py  transformer.py
notion_etl/airflow/: hooks.py  operators.py
